# Ringdown

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
deploy/: ringdown-collector.service  ringdown-mcp.service  ringdown-webui.service
ringdown/: __init__.py  collector.py  config.py  db.py  incidents.py  judge.py  mcp_server.py  obo.py  router.py  ruleset.py  schema.sql  syslog_parse.py  webui.py
ringdown/dispatch/: __init__.py  base.py  ntfy.py  turnstone.py
scripts/: provision-db.sh
scripts/migrations/: 2026-07-03-semantic-evals.sql  2026-07-04-webui-sessions.sql
tests/: test_dispatch.py  test_obo.py  test_router.py  test_syslog_parse.py
